MGS-2715 Add JVM options for tuning GC and opening JMX port.